--- a/uomwebdev/styles.css
+++ b/uomwebdev/styles.css
@@ -75,6 +75,12 @@ input[type="text"] {
   border-radius: 4px;
 }
 
+input[type="number"] {
+	border: 1px solid #ccc;
+	padding: 0.5em;
+	border-radius: 4px;
+}
+
 input[type="text"]:focus {
 	border-color: rgb(225, 132, 26);
 	outline: none;
