--- a/uomwebdev/styles.css
+++ b/uomwebdev/styles.css
@@ -22,13 +22,14 @@ body {
 	display: grid;
 	height: 100%; /* Full viewport height */
 	grid-template-areas:
-		"header header nav"
-		"top-bar top-bar top-bar"
-		"main main aside"
-		"footer footer footer";
-	grid-template-columns: auto auto auto;
+		"header"
+		"nav"
+		"top-bar"
+		"aside"
+		"main"
+		"footer";
+	grid-template-columns: auto;
 	grid-template-rows: auto auto 1fr auto;
-	max-width: 900px; /* Limit content width for readability */
 	margin: 20px auto; /* Center the container and add vertical spacing */
 	/* padding: 20px; */
 	background-color: #fff; /* White background for content area */
@@ -55,9 +56,9 @@ header h1 {
 nav {
 	grid-area: nav;
 	display: grid;
-	justify-items: right;
+	justify-items: left;
 	align-items: center;
-	padding-right: 1.25em;
+	padding-bottom: .5em;
 }
 nav ul {
 	align-items: center;
@@ -165,17 +166,18 @@ article p {
 /* Aside Styles */
 	aside {
 	grid-area: aside;
-	position: sticky;
-	top: 1em;
+	/* position: sticky;
+	top: .25em; */
 	align-self: start;
 	/* background-color: #f4f4f4; */
-	padding: .75em 1em;
+	padding: .5em s1em;
 	border-left: 5px solid rgb(26, 119, 225);
 	/* margin-top: .5em;                   */
 	/* height: 100%; */
 }
 
 aside h2 {
+	font-weight: bolder;
 	font-size: 1.5em;
 	color: rgb(26, 119, 225);
 }
@@ -256,3 +258,47 @@ img {
 	border-radius: 5px;
 	margin: 10px 0;
 }
+
+@media only screen and (min-width: 600px) {
+	.container {
+		grid-template-columns: repeat(3, auto);
+		grid-template-rows: auto auto 1fr auto;
+		grid-template-areas:
+			"header header nav"
+			"main main aside"
+			"footer footer footer";
+		max-width: 900px; 
+		margin: 20px auto; 
+		background-color: #fff;
+		box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+		border-radius: 5px; 
+	}
+	nav {
+		justify-items: center;
+		padding: 0;
+		margin-bottom: .5em;
+	}
+	nav ul li {
+		margin: 0 10px;
+	}
+	main {
+		padding-right: 2em;
+	}
+}
+
+/* .container {
+	display: grid;
+	height: 100%; 
+	grid-template-areas:
+		"header header nav"
+		"top-bar top-bar top-bar"
+		"main main aside"
+		"footer footer footer";
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto 1fr auto;
+	max-width: 900px; 
+	margin: 20px auto; 
+		background-color: #fff;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+	border-radius: 5px; 
+} */
