Add changes from ChatGPG and modify in styles2.css

--- a/uomwebdev/styles.css
+++ b/uomwebdev/styles.css
@@ -20,7 +20,7 @@ body {
 
 .container {
 	display: grid;
-	height: 100%; /* Full viewport height */
+	height: 100%;
 	grid-template-areas:
 		"header"
 		"nav"
